@startuml database

title Database Schema (with Strategy Integration)

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' --- NEW: ENUMS FOR STRATEGY & LOGIC ---
' Acestea sunt mapate in DB de obicei ca VARCHAR sau ENUM types
enum CompetitionStrategy {
   KNOCKOUT
   ROBIN_ROUND
   ROBIN_ROUND_DOUBLE
}

enum MatchStatus {
   SCHEDULED
   FINISHED
   CANCELLED
}

entity Team {
  +id: UUID <<PK>>
  --
  coach_id: UUID <<FK>>
  name: VARCHAR
}

entity Player {
  +id: UUID <<PK>>
  --
  team_id: UUID <<FK>>
  first_name: VARCHAR
  last_name: VARCHAR
  position: VARCHAR
  shirt_number: INT
  nationality: VARCHAR
}

entity Contract {
  +id: UUID <<PK>>
  --
  player_id: UUID <<FK>>
  team_id: UUID <<FK>>
  start_date: DATE
  end_date: DATE
  salary_per_year: INT
}

entity Coach {
  +id: UUID <<PK>>
  --
  first_name: VARCHAR
  last_name: VARCHAR
}

entity Match {
  +id: UUID <<PK>>
  --
  edition_id: UUID <<FK>>
  match_date: TIMESTAMP
  home_team_id: UUID <<FK>>
  away_team_id: UUID <<FK>>
  home_score: INT
  away_score: INT
  ' --- ADDED FOR STRATEGY FLOW ---
  status: VARCHAR ' Mapped to MatchStatus Enum
}

note right of Match
  Rows generated by **Strategy** logic.
  Scores populated by **Decider** service.
end note

entity MatchLineup {
  +match_id: UUID <<PK>> <<FK>>
  +player_id: UUID <<PK>> <<FK>>
  --
  status: VARCHAR ' STARTER, SUBSTITUTE
}

entity MatchEvent {
  +id: UUID <<PK>>
  --
  match_id: UUID <<FK>>
  player_id: UUID <<FK>>
  event_type: VARCHAR ' GOAL, OWN_GOAL, YELLOW_CARD, RED_CARD, SUB_IN, SUB_OUT
  minute: INT
}

entity PlayerEditionStats {
    +edition_id: UUID <<PK>> <<FK>>
    +player_id: UUID <<PK>> <<FK>>
    --
    goals: INT
    assists: INT
    yellow_cards: INT
    red_cards: INT
    minutes_played: INT
}


entity Competition {
  +id: UUID <<PK>>
  --
  name: VARCHAR ' e.g., "Premier League"
}

entity Edition {
  +id: UUID <<PK>>
  --
  competition_id: UUID <<FK>>
  year: INT
  ' --- ADDED FOR STRATEGY ---
  strategy_type: VARCHAR 
}

' Connect Edition to the Enum visually
Edition ..> CompetitionStrategy : defines logic via

note right of Edition::strategy_type
  Dictates which Java Strategy class
  (Knockout vs Robin) is instantiated.
end note

entity EditionTeam {
  +edition_id: UUID <<PK>> <<FK>>
  +team_id: UUID <<PK>> <<FK>>
}

entity Standings {
    +edition_id: UUID <<PK>> <<FK>>
    --
    ' This table is a materialized view/cache for performance
}

entity StandingsEntry {
    +edition_id: UUID <<PK>> <<FK>>
    +team_id: UUID <<PK>> <<FK>>
    --
    wins: INT
    draws: INT
    losses: INT
    goals_for: INT
    goals_against: INT
}

' Relationships
Team "1" -- "0..*" Player : has
Player "1" -- "0..*" Contract : has
Team "1" -- "0..*" Contract : signs

Team "1" -- "0..1" Coach : is coached by

Competition "1" -- "0..*" Edition : has
Edition "1" -- "1..*" EditionTeam : involves
Team "1" -- "1..*" EditionTeam : participates in

Edition "1" -- "0..*" Match : contains
Match ..> MatchStatus : uses

' A match has a home team and an away team
Team "1" -- "0..*" Match : as home team
Team "1" -- "0..*" Match : as away team

' Lineup and Events
Match "1" -- "0..*" MatchLineup : has lineup
Player "1" -- "0..*" MatchLineup : appears in

Match "1" -- "0..*" MatchEvent : has events
Player "1" -- "0..*" MatchEvent : is subject of

Edition "1" -- "0..*" PlayerEditionStats : has stats for
Player "1" -- "0..*" PlayerEditionStats : has stats in

' Standings relationships
Edition "1" -- "1" Standings : has
Standings "1" -- "1..*" StandingsEntry : consists of
Team "1" -- "0..1" StandingsEntry : is ranked in

@enduml